...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/eventNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="40sp"
                android:textStyle="bold"
                android:text="Event Name"/>
            <TextView
                android:id="@+id/eventFacilityTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="Event Facility"/>
            <TextView
                android:id="@+id/eventDateAndTimeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="Event Date -- Event Time"/>
        </LinearLayout>
        <LinearLayout
...
