...
                android:textSize="25sp"/>
            <android.widget.Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <TextView
                android:id="@+id/waitlistCapacityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Capacity: No Limit"
                android:textSize="25sp"/>
        </LinearLayout>
        <Button
            android:id="@+id/seeMapButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="See Map"
            android:layout_marginStart="10dp"
            android:layout_gravity="center_horizontal"
...
                android:layout_height="match_parent" />
        </LinearLayout>
        <TextView
            android:id="@+id/noCancelledTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No entrant has been cancelled from the event yet."
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:visibility="gone"/>
        <ListView
            android:id="@+id/eventCancelledlistListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
